added company bio

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,6 +8,9 @@
       <%= f.label :website , "Website" %>
       <%= f.text_field :website %>
 
+      <%= f.label :company_bio , "Company Description" %>
+      <%= f.text_area :company_bio, size: "6x6" %>
+
       <%= f.label :email %>
       <%= f.text_field :email %>
 
